--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -31,6 +31,8 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+   pod 'AzureCommunicationCalling', '~> 2.15.01'
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
     inherit! :search_paths
