--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need microphone access for VOIP calling.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need camera access for video calling</string>
 </dict>
 </plist>
