--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -31,7 +31,7 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-   pod 'AzureCommunicationCalling', '~> 2.15.01'
+   pod 'AzureCommunicationCalling', '2.15.0'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
