Change deployment version to 13

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
         pluginClass: AcsPlugin
       ios:
         pluginClass: AcsPlugin
+        iosPlatform: 13.0
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
