Removed the example package from android acs plugin

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group = "com.example.acs_plugin"
+group = "com.acs_plugin"
 version = "1.0-SNAPSHOT"
 
 buildscript {
@@ -25,7 +25,7 @@ apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
 android {
-    namespace = "com.example.acs_plugin"
+    namespace = "com.acs_plugin"
 
     compileSdk = 34
 
