--- a/example/ios/Runner.xcodeproj/xcshareddata/xcschemes/ScreenBroadcast.xcscheme
+++ b/example/ios/Runner.xcodeproj/xcshareddata/xcschemes/ScreenBroadcast.xcscheme
@@ -46,7 +46,7 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Profile"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "1"
