--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -44,6 +44,8 @@ buildscript {
         androidx_activity_compose_version = '1.5.1'
         compose_version = '1.2.1'
         kotlin_compiler_extension_version = '1.3.2'
+
+        kotlin_compiler_extension_version = '1.3.2'
     }
 
     repositories {
