--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -37,6 +37,17 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    packagingOptions {
+        resources {
+            excludes += [
+                    "META-INF/NOTICE.md",
+                    "META-INF/LICENSE.md",
+                    "META-INF/LICENSE",
+                    "META-INF/NOTICE"
+            ]
+        }
+    }
 }
 
 dependencies {
@@ -46,6 +57,8 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$androidx_constraint_layout_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$androidx_navigation_fragment_ktx_version"
     api ("com.azure.android:azure-communication-calling:$azure_calling_sdk_version")
+    api("com.azure.android:azure-communication-chat:$azure_chat_sdk_version")
+    api("com.azure.android:azure-communication-common:$azure_common_sdk_version")
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_viewmodel_ktx_version"
     implementation "com.microsoft.fluentui:fluentui_others:$microsoft_fluent_ui_version"
     implementation "com.microsoft.fluentui:fluentui_drawer:$microsoft_fluent_ui_version"
