--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -29,6 +29,8 @@ buildscript {
 
         azure_calling_sdk_version = '2.13.1'
 
+        azure_chat_sdk_version = '2.1.0'
+
         azure_common_sdk_version = '1.0.2'
 
         jetbrains_kotlinx_coroutines_test_version = '1.6.0-native-mt'
