--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -62,6 +62,7 @@ buildscript {
 
 plugins {
     id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.20'
 }
 
 allprojects {
