--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,6 +63,7 @@ buildscript {
 
 plugins {
     id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.21'
 }
 
 allprojects {
@@ -144,6 +145,8 @@ dependencies {
     implementation "com.microsoft.fluentui:fluentui_drawer:$microsoft_fluent_ui_version"
     implementation "com.microsoft.fluentui:fluentui_persona:$microsoft_fluent_ui_version"
     implementation "com.microsoft.fluentui:fluentui_transients:$microsoft_fluent_ui_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.1"
 
     api 'com.jakewharton.threetenabp:threetenabp:1.4.4'
 
