--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,6 +63,7 @@ buildscript {
 
 plugins {
     id 'org.jetbrains.kotlin.android' version '2.1.20' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.20'
 }
 
 allprojects {
@@ -160,4 +161,6 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$androidx_espresso_contrib_version"
     androidTestImplementation "androidx.test:rules:$androidx_test_rules_version"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$jetbrains_kotlinx_coroutines_test_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
 }
