--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$androidx_espresso_contrib_version"
     androidTestImplementation "androidx.test:rules:$androidx_test_rules_version"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$jetbrains_kotlinx_coroutines_test_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
 }
 
 flutter {
