Fixed insets on Android 15

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation("dev.chrisbanes.insetter:insetter:0.6.1")
 }
 
 flutter {
