--- a/android/build.gradle
+++ b/android/build.gradle
@@ -163,4 +163,5 @@ dependencies {
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$jetbrains_kotlinx_coroutines_test_version"
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation("dev.chrisbanes.insetter:insetter:0.6.1")
 }
