--- a/android/build.gradle
+++ b/android/build.gradle
@@ -169,4 +169,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-messaging:24.1.1'
+
+    def work_version = "2.7.1"
+    implementation "androidx.work:work-runtime:$work_version"
 }
