--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -85,8 +85,16 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.1")
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation("dev.chrisbanes.insetter:insetter:0.6.1")
+
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-messaging:24.1.1'
+
+    def work_version = "2.7.1"
+    implementation "androidx.work:work-runtime:$work_version"
 }
 
 flutter {
     source = "../.."
 }
+
+apply plugin: 'com.google.gms.google-services'
