--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:required="false" />
 
         <activity
-                android:name="com.acs_plugin.IncomingCallActivity"
+                android:name="com.acs_plugin.ui.IncomingCallActivity"
                 android:launchMode="singleTop"
                 android:theme="@style/AzureCommunicationUICalling.Theme"
                 android:exported="false"
@@ -84,7 +84,7 @@
         </service>
 
         <service
-            android:name=".FBMessagingService"
+            android:name=".service.FBMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
