refactor: rename `MyAppConfiguration` to `AcsApp` in manifest and class for consistency

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:label="acs_plugin_example"
-        android:name=".MyAppConfiguration"
+        android:name=".AcsApp"
         android:icon="@mipmap/ic_launcher"
         tools:replace="android:label">
         <activity
