When tapping decline/Accept call (from chat) on notification the user anyway redirected to the next screen with accept and decline call buttons

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -92,6 +92,14 @@
 			</intent-filter>
 		</service>
 
+		<receiver android:name=".utils.CallNotificationReceiver"
+			android:enabled="true"
+			android:exported="false">
+			<intent-filter>
+				<action android:name="com.acs_plugin.CALL_ACTION" />
+			</intent-filter>
+		</receiver>
+
 	</application>
 
 </manifest>
