--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	package="com.acs_plugin">
 
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -18,6 +17,12 @@
 	<uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 	<uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
 
+	<!-- Required for MediaProjection foreground service (Android 14+) -->
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
+	<uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
+	<uses-permission android:name="android.permission.PROJECT_MEDIA" />
+
+
 	<application android:hardwareAccelerated="true">
 
 		<activity
@@ -30,6 +35,7 @@
 			android:windowSoftInputMode="adjustResize"
 			android:showOnLockScreen="true"
 			android:turnScreenOn="true"
+			android:hardwareAccelerated="true"
 			android:screenOrientation="portrait" />
 
 		<activity
@@ -86,6 +92,12 @@
 		</service>
 
 		<service
+			android:name="com.acs_plugin.utils.ScreenShareService"
+			android:foregroundServiceType="mediaProjection"
+			android:exported="false" />
+
+
+		<service
 			android:name=".service.FBMessagingService"
 			android:exported="false">
 			<intent-filter>
@@ -93,7 +105,8 @@
 			</intent-filter>
 		</service>
 
-		<receiver android:name=".utils.CallNotificationReceiver"
+		<receiver
+			android:name=".utils.CallNotificationReceiver"
 			android:enabled="true"
 			android:exported="false">
 			<intent-filter>
